Paris Relay module
==================

2016-04-11 AKHE - vscp_getMatrixInfo nw use the pointer supplied by the framework.
2016-03-23 AKHE - Version 1.1.5-------------------------------------------------
2016-03-23 AKHE - Adopted to VSCP firmware 1.6.1
2016-03-23 AKHE - Version 1.1.4-------------------------------------------------
2016-03-23 AKHE - Version 1.1.3-------------------------------------------------
2016-03-23 AKHE - Fixed bug in control byte write routine.
2016-03-08 AKHE - Adopted to 1.6 firmware. Adopted for PIC18F26K80.
2015-11-26 AKHE - Status action now looks at relay enable bit.
2015-11-13 AKHE - Version 1.1.2
2015-11-12 AKHE - Fixed problem with dynamic filter/mask settings.
2015-09-13 AKHE - Sendtimer now works
2015-09-13 AKHE - Wrong relay index used for zone/subzone check in DM action executes.
2015-09-13 AKHE - Relay 7 control register removed and reserved register 9 removed from MDF.
2015-09-13 AKHE - Zone and subzone check now is dune on relay level as they should.
2015-09-13 AKHE - Changed channel_flags to register_flags
2015-01-12 AKHE - Fixed register read problem for some registers.
2015-01-11 AKHE - Fixed missed relay zone/subzone pair (mdf updated)
2015-01-11 AKHE - Fixed misaligned matrix (was at offset 70 should be 72).
2015-01-05 AKHE - Fixed problem with info events sending garbage when register 
					are written.
Version 0.1.7 2013-07-10 - Bugs in firmware source fixed.
                            main.h code moved to smartrelay.h
2012-10-18 AKHE - Fixed paths so code compiles again.
2012-10-18 AKHE - DM was not feed any events. Fixed.
2012-04-02 AKHE - Started development from old Paris Module