@@ -30,6 +30,8 @@
         </file>
     </editor-bookmarks>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
-        <group/>
+        <group>
+            <file>file:/home/akhe/development/VSCP/vscp_firmware/common/vscp_type.h</file>
+        </group>
     </open-files>
 </project-private>
