@@ -1,6 +1,8 @@
 Paris Relay module
 ==================
 
+2016-04-19 AKHE - RA4 set to input to prevent collision with VCAP circuits in
+                  PIC18F2580. Brown out raised to maximum (3V & 4.6V). Valuable                    input from Anders Forsgren, AJE Electronics AB.
 2016-04-11 AKHE - vscp_getMatrixInfo nw use the pointer supplied by the framework.
 2016-03-23 AKHE - Version 1.1.5-------------------------------------------------
 2016-03-23 AKHE - Adopted to VSCP firmware 1.6.1
